[gd_scene load_steps=14 format=3 uid="uid://b8gnhh4nqy3vh"]

[ext_resource type="PackedScene" uid="uid://j6dd7mgd0p3w" path="res://Scenes/Objects/Characters/Enemies/enemy.tscn" id="1_xlpgf"]
[ext_resource type="Script" path="res://Scenes/Objects/Characters/Enemies/enemy_fish.gd" id="2_kx5j3"]
[ext_resource type="Texture2D" uid="uid://woj7mao50pev" path="res://Resources/Textures/Characters/Enemies/Fishbot(Val)-Sheet.png" id="3_k2q41"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dae1m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ngshw"]
atlas = ExtResource("3_k2q41")
region = Rect2(96, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_va4bh"]
atlas = ExtResource("3_k2q41")
region = Rect2(128, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xldq"]
atlas = ExtResource("3_k2q41")
region = Rect2(160, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0rss"]
atlas = ExtResource("3_k2q41")
region = Rect2(192, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcle3"]
atlas = ExtResource("3_k2q41")
region = Rect2(0, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qccr"]
atlas = ExtResource("3_k2q41")
region = Rect2(32, 16, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p138r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngshw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va4bh")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xldq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0rss")
}],
"loop": true,
"name": &"dying",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcle3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qccr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o2wul"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_aduex"]
radius = 120.0

[node name="EnemyFish" instance=ExtResource("1_xlpgf")]
script = ExtResource("2_kx5j3")
_detection_radius = 120.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_dae1m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_p138r")
animation = &"dying"
autoplay = "idle"
frame_progress = 0.605992

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CircleShape2D_o2wul")

[node name="OutOfWaterDamageTimer" type="Timer" parent="Timers" index="1"]
wait_time = 1.5

[node name="DetectionArea" type="Area2D" parent="." index="5"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" index="0"]
shape = SubResource("CircleShape2D_aduex")

[connection signal="timeout" from="Timers/OutOfWaterDamageTimer" to="." method="_on_out_of_water_damage_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
